Bug 702221 - Ghostscript 9.51 - SIGFPE when -dFirstPage or -dLastPage is set
Summary: Ghostscript 9.51 - SIGFPE when -dFirstPage or -dLastPage is set
Status: RESOLVED FIXED
Alias: None
Product: Ghostscript
Classification: Unclassified
Component: PDF Interpreter (show other bugs)
Version: master
Hardware: PC MacOS X
: P4 major
Assignee: Default assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-03-16 05:33 UTC by James R Barlow
Modified: 2020-03-16 09:07 UTC (History)
0 users

See Also:
Customer:
Word Size: ---


Attachments
file that triggered issue (38.01 KB, application/pdf)
2020-03-16 05:33 UTC, James R Barlow
Details

Note You need to log in before you can comment on or make changes to this bug.
Description James R Barlow 2020-03-16 05:33:13 UTC
Created attachment 18993 [details]
file that triggered issue

Observed in Ghostscript 9.51, both Debian sid version and macOS Homebrew version.

The command:
gs -q -dSAFER -dBATCH -dNOPAUSE -sDEVICE=png16m -dFirstPage=1 -o out.png -f vector.pdf

causes a SIGFPE, unlike Ghostscript 9.50 and all older versions.

If `-dFirstPage=1` is removed, there is no issue.
Comment 1 Ken Sharp 2020-03-16 09:07:26 UTC
This should be fixed by this commit:

http://git.ghostscript.com/?p=ghostpdl.git;a=commit;h=aaf5edb15fceaae962569bae30eb4633480c1d15

I checked before and after with the supplied file and could reproduce the problem before, it did not reproduce afterwards.